# internal/api/meeting.go
@@ -2,24 +2,71 @@ package api
 
 import (
 	"context"
+	"github.com/ozoncp/ocp-meeting-api/internal/config"
+	"github.com/ozoncp/ocp-meeting-api/internal/metrics"
 	"github.com/ozoncp/ocp-meeting-api/internal/models"
+	"github.com/ozoncp/ocp-meeting-api/internal/producer"
 	"github.com/ozoncp/ocp-meeting-api/internal/repo"
+	"github.com/ozoncp/ocp-meeting-api/internal/utils"
 	desc "github.com/ozoncp/ocp-meeting-api/pkg/ocp-meeting-api"
 	log "github.com/rs/zerolog/log"
 	"google.golang.org/grpc/codes"
 	"google.golang.org/grpc/status"
 	"google.golang.org/protobuf/types/known/timestamppb"
+	"time"
 )
 
 type api struct {
 	desc.UnimplementedOcpMeetingApiServer
 	repo repo.Repo
+	prod producer.Producer
 }
 
-func NewOcpMeetingApi(repo repo.Repo) desc.OcpMeetingApiServer {
+func NewOcpMeetingApi(repo repo.Repo, prod producer.Producer) desc.OcpMeetingApiServer {
 	return &api{
 		repo: repo,
+		prod: prod,
 	}
+}
+
+func (a *api) MultiCreateMeetingsV1(
+	ctx context.Context,
+	req *desc.MultiCreateMeetingsV1Request,
+) (*desc.MultiCreateMeetingsV1Response, error) {
+	if err := req.Validate(); err != nil {
+		return nil, status.Error(codes.InvalidArgument, err.Error())
+	}
+
+	var meetings []models.Meeting
+	for _, meeting := range req.Meetings {
+		meetings = append(meetings, models.Meeting{
+			Id:     meeting.Id,
+			UserId: meeting.UserId,
+			Link:   meeting.Link,
+			Start:  meeting.Start.AsTime(),
+			End:    meeting.End.AsTime(),
+		})
+	}
+
+	config, _ := config.Read()
+
+	batchSize := config.Request.BatchSize
+	bulks := utils.SplitToBulks(meetings, uint(batchSize))
+	response := &desc.MultiCreateMeetingsV1Response{}
+
+	for i := 0; i < len(bulks); i++ {
+		meetingIds, err := a.repo.AddMany(ctx, bulks[i])
+		if err != nil {
+			log.Error().Msgf("Request %v failed with %v", req, err)
+			return nil, err
+		}
+
+		response.MeetingIds = append(response.MeetingIds, meetingIds...)
+	}
+
+	log.Printf("Сreation of the meetings was successful")
+
+	return response, nil
 }
 
 func (a *api) CreateMeetingV1(
@@ -44,6 +91,18 @@ func (a *api) CreateMeetingV1(
 	}
 
 	log.Printf("Сreation of the meeting was successful")
+	metrics.CreateCounterInc()
+
+	event := producer.EventMessage{
+		MeetingId: meeting.Id,
+		Timestamp: time.Now().Unix(),
+	}
+
+	msg := producer.CreateMessage(producer.Create, event)
+	if err = a.prod.Send(msg); err != nil {
+		log.Error().Msgf("failed send message to kafka")
+	}
+
 	return &desc.CreateMeetingV1Response{
 		MeetingId: meeting.Id,
 	}, nil
@@ -128,6 +187,18 @@ func (a *api) UpdateMeetingV1(
 	}
 
 	log.Printf("Updating of the meeting was successful")
+
+	metrics.UpdateCounterInc()
+
+	event := producer.EventMessage{
+		MeetingId: meeting.Id,
+		Timestamp: time.Now().Unix(),
+	}
+	msg := producer.CreateMessage(producer.Update, event)
+	if err = a.prod.Send(msg); err != nil {
+		log.Error().Msgf("failed send message to kafka")
+	}
+
 	return &desc.UpdateMeetingV1Response{
 		Updated: updated,
 	}, nil
@@ -150,6 +221,17 @@ func (a *api) RemoveMeetingV1(
 		log.Printf("Removing of the meeting was successful")
 	} else {
 		log.Printf("Removing of the meeting was failed")
+	}
+
+	metrics.RemoveCounterInc()
+
+	event := producer.EventMessage{
+		MeetingId: req.MeetingId,
+		Timestamp: time.Now().Unix(),
+	}
+	msg := producer.CreateMessage(producer.Delete, event)
+	if err = a.prod.Send(msg); err != nil {
+		log.Error().Msgf("failed send message to kafka")
 	}
 
 	return &desc.RemoveMeetingV1Response{
