# pkg/ocp-meeting-api/ocp-meeting-api.pb.gw.go
@@ -33,6 +33,40 @@ var _ = utilities.NewDoubleArray
 var _ = descriptor.ForMessage
 var _ = metadata.Join
 
+func request_OcpMeetingApi_MultiCreateMeetingsV1_0(ctx context.Context, marshaler runtime.Marshaler, client OcpMeetingApiClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq MultiCreateMeetingsV1Request
+	var metadata runtime.ServerMetadata
+
+	newReader, berr := utilities.IOReaderFactory(req.Body)
+	if berr != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", berr)
+	}
+	if err := marshaler.NewDecoder(newReader()).Decode(&protoReq); err != nil && err != io.EOF {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := client.MultiCreateMeetingsV1(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+
+}
+
+func local_request_OcpMeetingApi_MultiCreateMeetingsV1_0(ctx context.Context, marshaler runtime.Marshaler, server OcpMeetingApiServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq MultiCreateMeetingsV1Request
+	var metadata runtime.ServerMetadata
+
+	newReader, berr := utilities.IOReaderFactory(req.Body)
+	if berr != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", berr)
+	}
+	if err := marshaler.NewDecoder(newReader()).Decode(&protoReq); err != nil && err != io.EOF {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := server.MultiCreateMeetingsV1(ctx, &protoReq)
+	return msg, metadata, err
+
+}
+
 func request_OcpMeetingApi_CreateMeetingV1_0(ctx context.Context, marshaler runtime.Marshaler, client OcpMeetingApiClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
 	var protoReq CreateMeetingV1Request
 	var metadata runtime.ServerMetadata
@@ -251,6 +285,29 @@ func local_request_OcpMeetingApi_RemoveMeetingV1_0(ctx context.Context, marshale
 // Note that using this registration option will cause many gRPC library features to stop working. Consider using RegisterOcpMeetingApiHandlerFromEndpoint instead.
 func RegisterOcpMeetingApiHandlerServer(ctx context.Context, mux *runtime.ServeMux, server OcpMeetingApiServer) error {
 
+	mux.Handle("POST", pattern_OcpMeetingApi_MultiCreateMeetingsV1_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateIncomingContext(ctx, mux, req)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_OcpMeetingApi_MultiCreateMeetingsV1_0(rctx, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_OcpMeetingApi_MultiCreateMeetingsV1_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
 	mux.Handle("POST", pattern_OcpMeetingApi_CreateMeetingV1_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
@@ -407,6 +464,26 @@ func RegisterOcpMeetingApiHandler(ctx context.Context, mux *runtime.ServeMux, co
 // "OcpMeetingApiClient" to call the correct interceptors.
 func RegisterOcpMeetingApiHandlerClient(ctx context.Context, mux *runtime.ServeMux, client OcpMeetingApiClient) error {
 
+	mux.Handle("POST", pattern_OcpMeetingApi_MultiCreateMeetingsV1_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateContext(ctx, mux, req)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_OcpMeetingApi_MultiCreateMeetingsV1_0(rctx, inboundMarshaler, client, req, pathParams)
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_OcpMeetingApi_MultiCreateMeetingsV1_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
 	mux.Handle("POST", pattern_OcpMeetingApi_CreateMeetingV1_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
@@ -511,6 +588,8 @@ func RegisterOcpMeetingApiHandlerClient(ctx context.Context, mux *runtime.ServeM
 }
 
 var (
+	pattern_OcpMeetingApi_MultiCreateMeetingsV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "meetings"}, "", runtime.AssumeColonVerbOpt(true)))
+
 	pattern_OcpMeetingApi_CreateMeetingV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "meetings"}, "", runtime.AssumeColonVerbOpt(true)))
 
 	pattern_OcpMeetingApi_DescribeMeetingV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2}, []string{"v1", "meetings", "meeting_id"}, "", runtime.AssumeColonVerbOpt(true)))
@@ -523,6 +602,8 @@ var (
 )
 
 var (
+	forward_OcpMeetingApi_MultiCreateMeetingsV1_0 = runtime.ForwardResponseMessage
+
 	forward_OcpMeetingApi_CreateMeetingV1_0 = runtime.ForwardResponseMessage
 
 	forward_OcpMeetingApi_DescribeMeetingV1_0 = runtime.ForwardResponseMessage
