# pkg/ocp-meeting-api/ocp-meeting-api.pb.validate.go
@@ -123,6 +123,171 @@ var _ interface {
 	ErrorName() string
 } = MeetingValidationError{}
 
+// Validate checks the field values on MultiCreateMeetingsV1Request with the
+// rules defined in the proto definition for this message. If any rules are
+// violated, an error is returned.
+func (m *MultiCreateMeetingsV1Request) Validate() error {
+	if m == nil {
+		return nil
+	}
+
+	if len(m.GetMeetings()) < 1 {
+		return MultiCreateMeetingsV1RequestValidationError{
+			field:  "Meetings",
+			reason: "value must contain at least 1 item(s)",
+		}
+	}
+
+	for idx, item := range m.GetMeetings() {
+		_, _ = idx, item
+
+		if v, ok := interface{}(item).(interface{ Validate() error }); ok {
+			if err := v.Validate(); err != nil {
+				return MultiCreateMeetingsV1RequestValidationError{
+					field:  fmt.Sprintf("Meetings[%v]", idx),
+					reason: "embedded message failed validation",
+					cause:  err,
+				}
+			}
+		}
+
+	}
+
+	return nil
+}
+
+// MultiCreateMeetingsV1RequestValidationError is the validation error returned
+// by MultiCreateMeetingsV1Request.Validate if the designated constraints
+// aren't met.
+type MultiCreateMeetingsV1RequestValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e MultiCreateMeetingsV1RequestValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e MultiCreateMeetingsV1RequestValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e MultiCreateMeetingsV1RequestValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e MultiCreateMeetingsV1RequestValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e MultiCreateMeetingsV1RequestValidationError) ErrorName() string {
+	return "MultiCreateMeetingsV1RequestValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e MultiCreateMeetingsV1RequestValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sMultiCreateMeetingsV1Request.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = MultiCreateMeetingsV1RequestValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = MultiCreateMeetingsV1RequestValidationError{}
+
+// Validate checks the field values on MultiCreateMeetingsV1Response with the
+// rules defined in the proto definition for this message. If any rules are
+// violated, an error is returned.
+func (m *MultiCreateMeetingsV1Response) Validate() error {
+	if m == nil {
+		return nil
+	}
+
+	if len(m.GetMeetingIds()) < 1 {
+		return MultiCreateMeetingsV1ResponseValidationError{
+			field:  "MeetingIds",
+			reason: "value must contain at least 1 item(s)",
+		}
+	}
+
+	return nil
+}
+
+// MultiCreateMeetingsV1ResponseValidationError is the validation error
+// returned by MultiCreateMeetingsV1Response.Validate if the designated
+// constraints aren't met.
+type MultiCreateMeetingsV1ResponseValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e MultiCreateMeetingsV1ResponseValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e MultiCreateMeetingsV1ResponseValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e MultiCreateMeetingsV1ResponseValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e MultiCreateMeetingsV1ResponseValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e MultiCreateMeetingsV1ResponseValidationError) ErrorName() string {
+	return "MultiCreateMeetingsV1ResponseValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e MultiCreateMeetingsV1ResponseValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sMultiCreateMeetingsV1Response.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = MultiCreateMeetingsV1ResponseValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = MultiCreateMeetingsV1ResponseValidationError{}
+
 // Validate checks the field values on CreateMeetingV1Request with the rules
 // defined in the proto definition for this message. If any rules are
 // violated, an error is returned.
